Fixing tiny difference in overlap
The idea was for the picture to overlap the border of the main content
area. This wasn't happening, because the main area was rendered after the
logo and thus had a higher implicit z-index.

--- a/style.scss
+++ b/style.scss
@@ -66,6 +66,9 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 #blog-logo {
 	img {
+		position: relative;
+		z-index: 100;
+
 		@media #{$responsive-phone} {
 			display: none;
 		}
